--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=admin
     volumes:
-      - /opt/mysql:/var/lib/mysql 
+      - /opt/mysql:/var/lib/mysql
+    ports: 
+      - "3306:3306"
   apachephp:
     build: ./images/app
     command: "./bin/apachectl -D FOREGROUND"
