--- a/images/app/Dockerfile
+++ b/images/app/Dockerfile
@@ -4,19 +4,33 @@ FROM centos:7
 # Maintained by
 MAINTAINER Amal K Raj
 
-# Container working directory
-WORKDIR /opt/
-
 # Environment varaibles
 ENV APACHE_VERION 2.4.43
 ENV APACHE_HOME /opt/apache2
+ENV PATH="/opt/apache2/bin:${PATH}"
 
 # Installing dependancies
 RUN yum update -y \
     && yum install -y wget vim net-tools cmake make gcc openssl-devel expat-devel deltarpm 
 
+# Installing Php
+
+RUN yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm \
+    && yum -y install https://rpms.remirepo.net/enterprise/remi-release-7.rpm \
+    && yum -y install yum-utils \
+    && yum-config-manager --enable remi-php72 \
+    && yum update -y \
+    && yum install -y php php-pdo php-mysqlnd php-opcache php-xml php-mcrypt php-gd php-devel php-intl php-mbstring php-json php-iconv
+
+# Creating apache user
+RUN useradd -d /opt/apache2 -s /bin/nologin apache
+
+# Passing control to apache user
+USER apache
+
 # Installing apacahe2
-RUN wget https://mirrors.estointernet.in/apache//httpd/httpd-$APACHE_VERION.tar.gz \
+RUN cd /opt \
+    && wget https://mirrors.estointernet.in/apache//httpd/httpd-$APACHE_VERION.tar.gz \
     && tar -zxvf httpd-${APACHE_VERION}.tar.gz \
     && cd httpd-${APACHE_VERION} \
     && cd srclib \
@@ -34,20 +48,10 @@ RUN wget https://mirrors.estointernet.in/apache//httpd/httpd-$APACHE_VERION.tar.
     && cd /opt/ \
     && rm -rf /opt/httpd-2.4.43*
 
-# Changing to apache home folder
+# Setting up the environment
 WORKDIR /opt/apache2
-
-# Install Php
-
-RUN yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm \
-    && yum -y install https://rpms.remirepo.net/enterprise/remi-release-7.rpm \
-    && yum -y install yum-utils \
-    && yum-config-manager --enable remi-php72 \
-    && yum update -y \
-    && yum install -y php php-pdo php-mysqlnd php-opcache php-xml php-mcrypt php-gd php-devel php-intl php-mbstring php-json php-iconv \
-    && php --modules 
-
-RUN php -version
+COPY httpd.conf conf/httpd.conf
+EXPOSE 8080
 
 # Entrypoint
-CMD ["/opt/apache2/bin/apachectl", "-D", "FOREGROUND"]
+CMD ["apachectl", "-D", "FOREGROUND"]
