--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,11 @@ services:
       - "3306:3306"
   apachephp:
     build: ./images/app
+    hostname: apachephp
     command: "./bin/apachectl -D FOREGROUND"
     volumes:
       - /opt/magento:/opt/apache2/htdocs
     ports:
-      - "80:80"
+      - "80:8080"
     depends_on:
       - mysql
