--- a/images/app/Dockerfile
+++ b/images/app/Dockerfile
@@ -50,7 +50,7 @@ RUN cd /opt \
 # Installing magento
 COPY magento/magento-ce-${MAGENTO_VERSION}-p2_${SAMPLE_DATA}-2020-04-25-01-31-19.tar.gz /opt/
 RUN cd /opt \
-    && tar *${MAGENTO_VERSION}*.tar.gz
+    && tar -zxvf *${MAGENTO_VERSION}*.tar.gz
 
 # Passing control to apache user
 USER apache
