--- a/images/app/Dockerfile
+++ b/images/app/Dockerfile
@@ -50,9 +50,9 @@ RUN cd /opt \
 
 # Installing magento
 COPY magento/magento-ce-${MAGENTO_VERSION}-p2_${SAMPLE_DATA}-2020-04-25-01-31-19.tar.gz /opt/
-RUN mkdir $MAGENTO_HOME && cd MAGENTO_HOME \
+RUN mkdir $MAGENTO_HOME && mv /opt/*.tar.gz $MAGENTO_HOME && cd $MAGENTO_HOME \
     && tar -zxvf *${MAGENTO_VERSION}*.tar.gz \
-    && rm /opt/*${MAGENTO_VERSION}*.tar.gz
+    && rm $MAGENTO_HOME/*${MAGENTO_VERSION}*.tar.gz
 
 # Passing control to apache user
 USER apache
