--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       MAGENTO_ADMIN_PASSWORD: asdf2@12A
       MAGENTO_DB_NAME: magento
       MAGENTO_DB_HOST: mysql
-      MAGENTO_DB_USER: magento
-      MAGENTO_DB_PASSWORD: magento
+      MAGENTO_DB_USER: root
+      MAGENTO_DB_PASSWORD: admin
     ports:
       - "80:8080"
     depends_on:
