--- a/images/db/Dockerfile
+++ b/images/db/Dockerfile
@@ -1,2 +1,7 @@
 FROM mysql
 EXPOSE 3306
+
+ENV MYSQL_ROOT_PASSWORD admin
+ENV MYSQL_DATABASE magento
+ENV MYSQL_USER magento
+ENV MYSQL_PASSWORD magento
