--- a/images/app/httpd.conf
+++ b/images/app/httpd.conf
@@ -502,3 +502,15 @@ Include conf/extra/proxy-html.conf
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
+
+
+
+# PHP Configurations
+AddType application/x-httpd-php .php
+AddType application/x-httpd-phps .phps
+AddType application/x-httpd-php3 .php3 .phtml
+AddType application/x-httpd-php .html
+
+LoadModule php7_module modules/mod_php.so
+
+AddModule mod_php7.c
