--- a/images/app/httpd.conf
+++ b/images/app/httpd.conf
@@ -511,6 +511,9 @@ AddType application/x-httpd-phps .phps
 AddType application/x-httpd-php3 .php3 .phtml
 AddType application/x-httpd-php .html
 
-LoadModule php7_module modules/mod_php.so
+LoadModule php_module modules/mod_php.so
+LoadModule php5_module modules/libphp5.so
+LoadModule perl_module modules/libperl.so
 
-AddModule mod_php7.c
+AddModule mod_php.c
+AddModule mod_perl.c
