--- a/images/app/httpd.conf
+++ b/images/app/httpd.conf
@@ -200,7 +200,8 @@ ServerName apachephp
 # <Directory> blocks below.
 #
 <Directory />
-    AllowOverride none
+    Options Indexes FollowSymLinks MultiViews
+    AllowOverride All
     Require all denied
 </Directory>
 
