--- a/images/app/httpd.conf
+++ b/images/app/httpd.conf
@@ -200,8 +200,7 @@ ServerName apachephp
 # <Directory> blocks below.
 #
 <Directory />
-    Options Indexes FollowSymLinks MultiViews
-    AllowOverride All
+    AllowOverride none
     Require all denied
 </Directory>
 
@@ -231,14 +230,14 @@ DocumentRoot "/opt/apache2/htdocs"
     # http://httpd.apache.org/docs/2.4/mod/core.html#options
     # for more information.
     #
-    Options Indexes FollowSymLinks
+    Options Indexes FollowSymLinks MultiViews
+    AllowOverride All
 
     #
     # AllowOverride controls what directives may be placed in .htaccess files.
     # It can be "All", "None", or any combination of the keywords:
     #   AllowOverride FileInfo AuthConfig Limit
     #
-    AllowOverride None
 
     #
     # Controls who can get stuff from this server.
