--- a/images/app/Dockerfile-copy
+++ b/images/app/Dockerfile-copy
@@ -29,17 +29,37 @@ RUN yum update -y \
     && yum install -y wget vim net-tools cmake make gcc openssl-devel expat-devel deltarpm libxml2-devel
 
 # Installing apacahe2
-RUN yum install httpd
+RUN cd /opt \
+    && useradd apache \
+    && wget https://mirrors.estointernet.in/apache//httpd/httpd-$APACHE_VERION.tar.gz \
+    && tar -zxvf httpd-${APACHE_VERION}.tar.gz \
+    && cd httpd-${APACHE_VERION} \
+    && cd srclib \
+    && wget https://mirrors.estointernet.in/apache//apr/apr-1.7.0.tar.gz \
+    && wget https://mirrors.estointernet.in/apache//apr/apr-util-1.6.1.tar.gz \
+    && tar -zxvf apr-1.7.0.tar.gz \
+    && tar -zxvf apr-util-1.6.1.tar.gz \
+    && rm -rf  *.tar.gz \
+    && mv apr-1.7.0 apr \
+    && mv apr-util-1.6.1 apr-util \
+    && cd .. \
+    && ./configure --prefix=/opt/apache2 --with-included-apr --enable-so --with-mysql\
+    && make \
+    && make install \
+    && cd /opt/ \
+    && rm -rf /opt/httpd-2.4.43* \
+    && chown -R apache:apache /opt/apache2 
 
 # Installing Php
-COPY php.ini /etc/
-RUN yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm \
-    && yum -y install https://rpms.remirepo.net/enterprise/remi-release-7.rpm \
-    && yum -y install yum-utils \
-    && yum-config-manager --enable remi-php72 \
-    && yum update -y \
-    && yum install -y php php-pdo php-mysqlnd php-opcache php-xml php-mcrypt php-gd \
-       php-devel php-intl php-mbstring php-json php-iconv php-soap php-bcmath php-zip  
+COPY php.ini /opt/php/lib/php.ini
+RUN wget https://www.php.net/distributions/php-${PHP_VERSION}.tar.gz \
+    && tar -zxvf php-${PHP_VERSION}.tar.gz \
+    && cd php-${PHP_VERSION} \
+    && ./configure --with-apxs2=/opt/apache2/bin/apxs --prefix=$PHP_HOME \
+    && make \
+    && make install \
+    && ln -s $PHP_HOME/lib/php.ini $PHP_HOME/etc/ \
+    && rm -f /opt/php-*
 
 # Installing magento
 COPY magento/magento-ce-${MAGENTO_VERSION}-p2_${SAMPLE_DATA}-2020-04-25-01-31-19.tar.gz /opt/
