--- a/images/app/httpd.conf
+++ b/images/app/httpd.conf
@@ -361,8 +361,8 @@ IncludeOptional conf.d/*.conf
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html/example.com/public_html
 
-    ErrorLog /var/www/html/example.com/logs/error.log
-    CustomLog /var/www/html/example.com/logs/access.log combined
+    # ErrorLog /var/www/html/example.com/logs/error.log
+    # CustomLog /var/www/html/example.com/logs/access.log combined
 
     <Directory /var/www/html/example.com/public_html>
         Options Indexes FollowSymLinks MultiViews
