--- a/images/app/Dockerfile
+++ b/images/app/Dockerfile
@@ -5,7 +5,7 @@ FROM centos:7
 MAINTAINER Amal K Raj
 
 # Environment varaibles
-ENV MAGENTO_VERSION 2.3.4
+ENV MAGENTO_VERSION 2.3.5
 ENV SAMPLE_DATA sample_data
 ENV MAGENTO_HOME /var/www/html/example.com/public_html
 ENV PATH="${MAGENTO_HOME}/bin:${PATH}"
@@ -39,11 +39,11 @@ RUN yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.n
        php-devel php-intl php-mbstring php-json php-iconv php-soap php-bcmath php-zip  
 
 # Installing magento
-COPY magento/magento-ce-${MAGENTO_VERSION}-p2_${SAMPLE_DATA}-2020-04-25-01-31-19.tar.gz /opt/
+COPY magento/magento-ce-${MAGENTO_VERSION}-p1_${SAMPLE_DATA}-2020-04-24-10-19-21.zip /opt/
 
-RUN mkdir -p $MAGENTO_HOME && mv /opt/*.tar.gz $MAGENTO_HOME && cd $MAGENTO_HOME \
-    && tar -zxvf *${MAGENTO_VERSION}*.tar.gz  \
-    && rm *.tar.gz
+RUN mkdir -p $MAGENTO_HOME && mv /opt/*.zip $MAGENTO_HOME && cd $MAGENTO_HOME \
+    && unzip *${MAGENTO_VERSION}*.zip \
+    && rm *.zip
 
 RUN cd $MAGENTO_HOME \
     && useradd magento \
