--- a/images/app/Dockerfile
+++ b/images/app/Dockerfile
@@ -7,7 +7,7 @@ MAINTAINER Amal K Raj
 # Environment varaibles
 ENV MAGENTO_VERSION 2.3.5
 ENV SAMPLE_DATA sample_data
-ENV MAGENTO_HOME /var/www/html/example.com/public_html
+ENV MAGENTO_HOME /var/www/html/wipro-demo.com/public_html/magento
 ENV PATH="${MAGENTO_HOME}/bin:${PATH}"
 
 ENV MAGENTO_ADMIN_FIRSTNAME name
@@ -57,7 +57,7 @@ RUN cd $MAGENTO_HOME \
 WORKDIR /opt
 COPY httpd.conf /etc/httpd/conf/
 COPY magento-httpd.conf /etc/httpd/conf.d/
-RUN mkdir /var/www/html/example.com/logs
+RUN mkdir /var/www/html/wipro-demo.com/logs
 EXPOSE 80
 
 # Adding startup script
