--- a/images/app/Dockerfile
+++ b/images/app/Dockerfile
@@ -43,7 +43,7 @@ COPY magento/magento-ce-${MAGENTO_VERSION}_${SAMPLE_DATA}-2020-04-24-10-19-21.zi
 
 RUN mkdir -p $MAGENTO_HOME && mv /opt/*.zip $MAGENTO_HOME && cd $MAGENTO_HOME \
     && unzip *${MAGENTO_VERSION}*.zip \
-    && mv magento-ce-${MAGENTO_VERSION}_${SAMPLE_DATA}-2020-04-24-10-19-21 magento
+    && mv magento-ce-${MAGENTO_VERSION}_${SAMPLE_DATA}-2020-04-24-10-19-21 magento \
     && rm *.zip
 
 RUN cd $MAGENTO_HOME \
