--- a/images/app/Dockerfile
+++ b/images/app/Dockerfile
@@ -23,7 +23,7 @@ ENV MAGENTO_DB_PASSWORD magento
 # Installing dependancies
 RUN yum update -y \
     && yum install -y wget vim net-tools cmake make gcc openssl-devel expat-devel deltarpm libxml2-devel \
-       libpng libpng-devel libjpeg libjpeg-devel
+       libpng libpng-devel libjpeg libjpeg-devel unzip
 
 # Installing apacahe2
 RUN yum install -y httpd
