--- a/images/app/magento-httpd.conf
+++ b/images/app/magento-httpd.conf
@@ -4,6 +4,7 @@
 <VirtualHost *:80>
     ServerName wipro-demo.com
     ServerAlias www.wipro-demo.com
+    ServerAlias *.amazonaws.com
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html/wipro-demo.com/public_html
 
