--- a/images/app/magento-httpd.conf
+++ b/images/app/magento-httpd.conf
@@ -1,16 +1,16 @@
-<Directory /var/www/html/wipro-demo.com/public_html>
+<Directory /var/www/html/public_html>
     Require all granted
 </Directory>
 <VirtualHost *:80>
     ServerName wipro-demo.com
     ServerAlias *.amazonaws.com
     ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html/wipro-demo.com/public_html
+    DocumentRoot /var/www/html/public_html
 
-    ErrorLog /var/www/html/wipro-demo.com/logs/error.log
-    CustomLog /var/www/html/wipro-demo.com/logs/access.log combined
+    ErrorLog /var/www/html/logs/error.log
+    CustomLog /var/www/html/logs/access.log combined
 
-    <Directory /var/www/html/wipro-demo.com/public_html>
+    <Directory /var/www/html/public_html>
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
     </Directory>
