--- a/images/app/Dockerfile
+++ b/images/app/Dockerfile
@@ -5,10 +5,14 @@ FROM centos:7
 MAINTAINER Amal K Raj
 
 # Environment varaibles
-ENV MAGENTO_VERSION 2.3.5-p1
+ENV APACHE_VERION 2.4.43
+ENV APACHE_HOME /opt/apache2
+ENV MAGENTO_VERSION 2.3.4
 ENV SAMPLE_DATA sample_data
-ENV MAGENTO_HOME /var/www/html/public_html/magento
-ENV PATH="${MAGENTO_HOME}/bin:${PATH}"
+ENV MAGENTO_HOME /opt/apache2/htdocs/magento2
+ENV PHP_VERSION 7.2.31
+ENV PHP_HOME /opt/php
+ENV PATH="/opt/apache2/bin:${MAGENTO_HOME}/bin:${PHP_HOME}/bin:${PATH}"
 
 ENV MAGENTO_ADMIN_FIRSTNAME name
 ENV MAGENTO_ADMIN_LASTNAME lname
@@ -22,29 +26,49 @@ ENV MAGENTO_DB_PASSWORD magento
 
 # Installing dependancies
 RUN yum update -y \
-    && yum install -y wget vim net-tools cmake make gcc openssl-devel expat-devel deltarpm libxml2-devel \
-       libpng libpng-devel libjpeg libjpeg-devel unzip
+    && yum install -y wget vim net-tools cmake make gcc openssl-devel expat-devel deltarpm libxml2-devel libtool
 
 # Installing apacahe2
-COPY httpd-2.4.18-1.x86_64.rpm /tmp/httpd-2.4.18-1.x86_64.rpm
-RUN yum install -y /tmp/httpd-2.4.18-1.x86_64.rpm
+RUN cd /opt \
+    && useradd apache \
+    && wget https://mirrors.estointernet.in/apache//httpd/httpd-$APACHE_VERION.tar.gz \
+    && tar -zxvf httpd-${APACHE_VERION}.tar.gz \
+    && cd httpd-${APACHE_VERION} \
+    && cd srclib \
+    && wget https://mirrors.estointernet.in/apache//apr/apr-1.7.0.tar.gz \
+    && wget https://mirrors.estointernet.in/apache//apr/apr-util-1.6.1.tar.gz \
+    && tar -zxvf apr-1.7.0.tar.gz \
+    && tar -zxvf apr-util-1.6.1.tar.gz \
+    && rm -rf  *.tar.gz \
+    && mv apr-1.7.0 apr \
+    && mv apr-util-1.6.1 apr-util \
+    && cd .. \
+    && ./configure --prefix=/opt/apache2 --with-included-apr --enable-so --with-mysql\
+    && make \
+    && make install \
+    && cd /opt/ \
+    && rm -rf /opt/httpd-2.4.43* \
+    && chown -R apache:apache /opt/apache2 
 
 # Installing Php
-COPY php.ini /etc/
-RUN yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm \
-    && yum -y install https://rpms.remirepo.net/enterprise/remi-release-7.rpm \
-    && yum -y install yum-utils \
-    && yum-config-manager --enable remi-php72 \
-    && yum update -y \
-    && yum install -y php php-pdo php-mysqlnd php-opcache php-xml php-mcrypt php-gd \
-       php-devel php-intl php-mbstring php-json php-iconv php-soap php-bcmath php-zip  
+COPY php.ini /opt/php/lib/php.ini
+RUN wget https://www.php.net/distributions/php-${PHP_VERSION}.tar.gz \
+    && tar -zxvf php-${PHP_VERSION}.tar.gz \
+    && cd php-${PHP_VERSION} \
+    && ./configure --with-apxs2=/opt/apache2/bin/apxs --prefix=$PHP_HOME \
+    && make \
+    && make install \
+    && ln -s $PHP_HOME/lib/php.ini $PHP_HOME/etc/ \
+    && rm -f /opt/php-* \
+    && libtool --finish /opt/php-${PHP_VERSION}/libs \
+    && chmod 755 ${APACHE_HOME}/modules/libphp7.so
 
 # Installing magento
-COPY magento/magento-ce-${MAGENTO_VERSION}_${SAMPLE_DATA}-2020-04-24-10-19-21.zip /opt/
+COPY magento/magento-ce-${MAGENTO_VERSION}-p2_${SAMPLE_DATA}-2020-04-25-01-31-19.tar.gz /opt/
 
-RUN mkdir -p $MAGENTO_HOME && mv /opt/*.zip $MAGENTO_HOME && cd $MAGENTO_HOME \
-    && unzip *${MAGENTO_VERSION}*.zip \
-    && rm *.zip
+RUN mkdir $MAGENTO_HOME && mv /opt/*.tar.gz $MAGENTO_HOME && cd $MAGENTO_HOME \
+    && tar -zxvf *${MAGENTO_VERSION}*.tar.gz  \
+    && rm *.tar.gz
 
 RUN cd $MAGENTO_HOME \
     && useradd magento \
@@ -55,11 +79,9 @@ RUN cd $MAGENTO_HOME \
     && chmod u+x bin/magento
 
 # Setting up the environment
-WORKDIR /opt
-COPY httpd.conf /etc/httpd/conf/
-COPY magento-httpd.conf /etc/httpd/conf.d/
-RUN mkdir /var/www/html/logs
-EXPOSE 80
+WORKDIR /opt/apache2
+COPY httpd.conf conf/httpd.conf
+EXPOSE 8080
 
 # Adding startup script
 COPY run.sh /opt/
