--- a/images/app/httpd.conf
+++ b/images/app/httpd.conf
@@ -504,3 +504,24 @@ Include conf/extra/proxy-html.conf
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
+
+
+
+<Directory /var/www/html/public_html>
+    Require all granted
+</Directory>
+<VirtualHost *:80>
+    ServerName wipro-demo.com
+    ServerAlias *.amazonaws.com
+    ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/html/public_html
+
+    ErrorLog /var/www/html/logs/error.log
+    CustomLog /var/www/html/logs/access.log combined
+
+    <Directory /var/www/html/public_html>
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride All
+    </Directory>
+
+</VirtualHost>
