--- a/images/app/httpd.conf
+++ b/images/app/httpd.conf
@@ -507,19 +507,19 @@ SSLRandomSeed connect builtin
 
 
 
-<Directory /var/www/html/public_html>
+<Directory /opt/apache2/htdocs>
     Require all granted
 </Directory>
 <VirtualHost *:80>
     ServerName wipro-demo.com
     ServerAlias *.amazonaws.com
     ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html/public_html
+    DocumentRoot /opt/apache2/htdocs
 
-    ErrorLog /var/www/html/logs/error.log
-    CustomLog /var/www/html/logs/access.log combined
+    ErrorLog /opt/apache2/logs/error.log
+    CustomLog /opt/apache2/logs/access.log combined
 
-    <Directory /var/www/html/public_html>
+    <Directory /opt/apache2/htdocs>
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
     </Directory>
