--- a/images/app/httpd.conf
+++ b/images/app/httpd.conf
@@ -507,19 +507,19 @@ SSLRandomSeed connect builtin
 
 
 
-<Directory /opt/apache2/htdocs>
+<Directory /opt/apache2/htdocs/public_html>
     Require all granted
 </Directory>
 <VirtualHost *:80>
     ServerName wipro-demo.com
     ServerAlias *.amazonaws.com
     ServerAdmin webmaster@localhost
-    DocumentRoot /opt/apache2/htdocs
+    DocumentRoot /opt/apache2/htdocs/public_html
 
     ErrorLog /opt/apache2/logs/error.log
     CustomLog /opt/apache2/logs/access.log combined
 
-    <Directory /opt/apache2/htdocs>
+    <Directory /opt/apache2/htdocs/public_html>
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
     </Directory>
